<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical"
    tools:context=".view.AboutFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/activity_horizontal_margin">

        <TextView
            android:id="@+id/tv_mission_title"
            style="@style/TextViewContentTitle"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:text="@string/about_frag_mission_title" />

        <TextView
            android:id="@+id/tv_mission_desc"
            style="@style/AboutFragTextViewContent"
            android:layout_below="@+id/tv_mission_title"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:text="@string/about_frag_mission_desc" />

        <TextView
            android:id="@+id/tv_vision_title"
            style="@style/TextViewContentTitle"
            android:layout_below="@+id/tv_mission_desc"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:text="@string/about_frag_vision_title" />

        <TextView
            android:id="@+id/tv_vision_desc"
            style="@style/AboutFragTextViewContent"
            android:layout_below="@+id/tv_vision_title"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:text="@string/about_frag_vision_desc" />

        <TextView
            android:id="@+id/tv_values_title"
            style="@style/TextViewContentTitle"
            android:layout_below="@+id/tv_vision_desc"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:text="@string/about_frag_values_title" />

        <TextView
            android:id="@+id/tv_values_desc"
            style="@style/AboutFragTextViewContent"
            android:layout_below="@+id/tv_values_title"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:text="@string/about_frag_values_desc" />

        <TextView
            android:id="@+id/tv_ethic_title"
            style="@style/TextViewContentTitle"
            android:layout_below="@+id/tv_values_desc"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:text="@string/about_frag_ethic_title" />

        <TextView
            android:id="@+id/tv_ethic_desc"
            style="@style/AboutFragTextViewContent"
            android:layout_below="@+id/tv_ethic_title"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:text="@string/about_frag_ethic_desc" />

        <TextView
            android:id="@+id/tv_social_networks_title"
            style="@style/TextViewContentTitle"
            android:layout_below="@+id/tv_ethic_desc"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginBottom="14dp"
            android:text="@string/about_frag_social_networks_title" />

        <net.steamcrafted.materialiconlib.MaterialIconView
            android:id="@+id/iv_instagram"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_social_networks_title"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginBottom="8dp"
            android:layout_marginRight="4dp"
            android:layout_marginEnd="4dp"
            android:contentDescription="@string/ic_instagram_desc"
            app:materialIcon="instagram"
            app:materialIconColor="@color/colorLink"
            app:materialIconSize="17dp" />

        <TextView
            android:id="@+id/tv_instagram"
            style="@style/TextViewLink"
            android:layout_alignTop="@+id/iv_instagram"
            android:layout_toEndOf="@+id/iv_instagram"
            android:layout_toRightOf="@+id/iv_instagram"
            android:text="@string/label_instagram" />

        <net.steamcrafted.materialiconlib.MaterialIconView
            android:id="@+id/iv_facebook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/iv_instagram"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginBottom="8dp"
            android:layout_marginRight="4dp"
            android:layout_marginEnd="4dp"
            android:contentDescription="@string/ic_facebook_desc"
            app:materialIcon="facebook_box"
            app:materialIconColor="@color/colorLink"
            app:materialIconSize="17dp" />

        <TextView
            android:id="@+id/tv_facebook"
            style="@style/TextViewLink"
            android:layout_alignTop="@+id/iv_facebook"
            android:layout_toEndOf="@+id/iv_facebook"
            android:layout_toRightOf="@+id/iv_facebook"
            android:text="@string/label_fabebook" />

        <net.steamcrafted.materialiconlib.MaterialIconView
            android:id="@+id/iv_twitter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/iv_facebook"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginBottom="8dp"
            android:layout_marginRight="4dp"
            android:layout_marginEnd="4dp"
            android:contentDescription="@string/ic_twitter_desc"
            app:materialIcon="twitter"
            app:materialIconColor="@color/colorLink"
            app:materialIconSize="17dp" />

        <TextView
            android:id="@+id/tv_twitter"
            style="@style/TextViewLink"
            android:layout_alignTop="@+id/iv_twitter"
            android:layout_toEndOf="@+id/iv_twitter"
            android:layout_toRightOf="@+id/iv_twitter"
            android:text="@string/label_twitter" />

        <net.steamcrafted.materialiconlib.MaterialIconView
            android:id="@+id/iv_youtube"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/iv_twitter"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginBottom="8dp"
            android:layout_marginRight="4dp"
            android:layout_marginEnd="4dp"
            android:contentDescription="@string/ic_youtube_desc"
            app:materialIcon="youtube"
            app:materialIconColor="@color/colorLink"
            app:materialIconSize="17dp" />

        <TextView
            android:id="@+id/tv_youtube"
            style="@style/TextViewLink"
            android:layout_alignTop="@+id/iv_youtube"
            android:layout_toEndOf="@+id/iv_youtube"
            android:layout_toRightOf="@+id/iv_youtube"
            android:text="@string/label_youtube" />

        <net.steamcrafted.materialiconlib.MaterialIconView
            android:id="@+id/iv_linkedin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/iv_youtube"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginBottom="8dp"
            android:layout_marginRight="4dp"
            android:layout_marginEnd="4dp"
            android:contentDescription="@string/ic_linkedin_desc"
            app:materialIcon="linkedin_box"
            app:materialIconColor="@color/colorLink"
            app:materialIconSize="17dp" />

        <TextView
            android:id="@+id/tv_linkedin"
            style="@style/TextViewLink"
            android:layout_alignTop="@+id/iv_linkedin"
            android:layout_toEndOf="@+id/iv_linkedin"
            android:layout_toRightOf="@+id/iv_linkedin"
            android:text="@string/label_linkedin" />

        <TextView
            android:id="@+id/tv_linkedin_info"
            style="@style/TextViewOrangeInfo"
            android:layout_alignTop="@+id/tv_linkedin"
            android:layout_toEndOf="@+id/tv_linkedin"
            android:layout_toRightOf="@+id/tv_linkedin"
            android:text="@string/info_linkedin" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/iv_linkedin"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="24dp"
            android:orientation="horizontal">

            <net.steamcrafted.materialiconlib.MaterialIconView
                android:id="@+id/iv_cnpj1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="0dp"
                android:layout_marginEnd="4dp"
                android:layout_marginRight="4dp"
                android:contentDescription="@string/ic_cnpj_desc"
                app:materialIcon="domain"
                app:materialIconColor="@color/colorText"
                app:materialIconSize="18dp" />

            <TextView
                android:id="@+id/tv_cnpj"
                style="@style/TextViewLink"
                android:text="@string/label_cnpj"
                android:textColor="@color/colorText" />
        </LinearLayout>

    </RelativeLayout>

</androidx.core.widget.NestedScrollView>
