<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rl_header_user_not_logged"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="40dp"
    android:paddingTop="30dp"
    android:paddingRight="40dp"
    android:paddingBottom="30dp">

    <Button
        android:id="@+id/bt_login"
        style="@style/ButtonForm"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="0dp"
        android:onClick="callLoginActivity"
        android:text="@string/tx_login" />

    <TextView
        android:id="@+id/tv_or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_toEndOf="@+id/bt_login"
        android:layout_toRightOf="@+id/bt_login"
        android:text="@string/tx_or"
        android:textColor="@color/colorText" />

    <TextView
        android:id="@+id/tv_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toEndOf="@+id/tv_or"
        android:layout_toRightOf="@+id/tv_or"
        android:text="@string/tx_me_sign_up"
        android:textColor="@color/colorLink" />

</RelativeLayout>
